--- a/TravelAssistant/app/src/main/res/drawable/border_search_edit_text.xml
+++ b/TravelAssistant/app/src/main/res/drawable/border_search_edit_text.xml
@@ -4,4 +4,6 @@
     <!-- you can use any color you want I used here gray color-->
     <solid android:color="@color/colorGray50"/>
     <corners android:radius="5dp"/>
+    <stroke android:color="@color/colorOrange"
+        android:width="2dp"/>
 </shape>
