--- a/TravelAssistant/app/src/main/res/layout/activity_main.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_main.xml
@@ -116,14 +116,28 @@
             android:contentDescription="@string/sign_up_with_google"
             android:layout_marginEnd="5dp"/>
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/facebook_icons8"
-            android:background="@color/colorWhite"
-            android:contentDescription="@string/sign_up_with_facebook"
+        <FrameLayout
             android:layout_toEndOf="@id/googleIcon"
-            android:layout_marginStart="5dp"/>
+            android:id="@+id/FrameLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/facebookIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <ImageButton
+                android:background="@color/colorWhite"
+                android:src="@mipmap/facebook_icons8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/fb"
+                android:textAllCaps="false"
+                android:textSize="22sp"
+                android:textColor="#ffffff" />
+        </FrameLayout>
     </RelativeLayout>
 
 
