--- a/TravelAssistant/app/src/main/res/layout/activity_list_tour.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_list_tour.xml
@@ -2,7 +2,9 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".ListTourActivity">
 
     <EditText
         android:id="@+id/edtSearch"
@@ -24,6 +26,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
     />
+
+    <ImageButton
+        android:id="@+id/imgbCreat"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_above="@id/layoutBarBottom"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        android:src="@drawable/add_icon" />
     <LinearLayout
         android:id="@+id/layoutBarBottom"
         android:layout_width="match_parent"
