Thêm màn hình tạo tour

--- a/TravelAssistant/app/src/main/res/values/colors.xml
+++ b/TravelAssistant/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorOrange70">#FF9800</color>
     <color name="colorGray">#9B9998</color>
     <color name="colorGray50">#E4E4E4</color>
+    <color name="colorBlack">#070707</color>
 </resources>
