--- a/TravelAssistant/app/src/main/res/layout/activity_list_stop_point.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_list_stop_point.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".ListStopPoint">
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvListStopPoint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
