Thêm danh sách các tỉnh và các dịch vụ trong màn hình popup

--- a/TravelAssistant/app/src/main/res/layout/stoppoint_info_popup.xml
+++ b/TravelAssistant/app/src/main/res/layout/stoppoint_info_popup.xml
@@ -75,7 +75,8 @@
         android:layout_below="@id/stop_point_serviceType_Title"
         android:background="@drawable/border_edit_text"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        />
 
     <TextView
         android:id="@+id/stop_point_address_Title"
@@ -290,8 +291,6 @@
         >
 
         <RelativeLayout
-
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
