--- a/TravelAssistant/app/src/main/res/layout/activity_stop_point_map.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_stop_point_map.xml
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border_search_edit_text"
-        android:layout_marginTop="8dp"
+        android:layout_below="@id/layout"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp">
 
@@ -97,6 +98,37 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="14dp"
         android:layout_marginBottom="14dp"/>
+
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorOrange"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <ImageButton
+            android:id="@+id/imgbTickButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_action_name"
+            android:background="@android:color/transparent"
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:scaleType="fitXY"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="30sp"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_marginStart="50dp"/>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
