- Hoàn thành giao diện lịch sử + giao diện lời mời (đã đổ dữ liệu từ API vào).

--- a/TravelAssistant/app/src/main/res/layout/activity_list_stop_point.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_list_stop_point.xml
@@ -9,6 +9,8 @@
         android:id="@+id/rcvListStopPoint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/btnSave"
+        android:layout_marginBottom="8dp"
         />
 
     <Button
