--- a/TravelAssistant/app/src/main/res/layout/activity_list_tour.xml
+++ b/TravelAssistant/app/src/main/res/layout/activity_list_tour.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ListTourActivity">
 
@@ -94,4 +95,104 @@
             android:scaleType="fitXY"
             android:adjustViewBounds="true"/>
     </LinearLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/layoutSetting"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:layout_marginTop="15dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_avatar"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/no_avatar"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/quantum_black_100"/>
+
+        <LinearLayout
+            android:id="@+id/ln01"
+            android:layout_toRightOf="@id/profile_avatar"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/fullnameTitle"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/quantum_black_100"/>
+
+            <TextView
+                android:id="@+id/tvFullName"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_height="wrap_content"
+                android:text="abc"
+                android:textStyle="italic"
+                android:textColor="@color/colorGray"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln02"
+            android:layout_toRightOf="@id/profile_avatar"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/ln01"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/IdTitle"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/quantum_black_100"/>
+
+            <TextView
+                android:id="@+id/tvId"
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_height="wrap_content"
+                android:text="abc"
+                android:textStyle="italic"
+                android:textColor="@color/colorGray"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvEditProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/editProfile"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="6dp"
+            android:layout_below="@id/ln02"
+            android:layout_toRightOf="@id/profile_avatar"
+            android:textColor="@color/quantum_black_100"/>
+
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_button"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="50dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_below="@id/tvEditProfile"
+            android:text="@string/logout"
+            android:textColor="@color/quantum_white_100"/>
+    </RelativeLayout>
 </RelativeLayout>
